--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "react-helmet": "^5.2.0",
         "rehype-react": "^3.1.0",
         "remark-react": "^5.0.1",
-        "reveal.js": "^3.8.0"
+        "reveal.js": "^3.8.0",
+	"browser-monads": "^1.0.0"
     },
     "scripts": {
         "build": "gatsby build",
