--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "dev": "gatsby develop",
         "lint": "eslint **",
         "clear": "rm -rf .cache",
-        "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
+        "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
     },
     "devDependencies": {
         "browser-monads": "^1.0.0",
