--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
         "react-helmet": "^5.2.0",
         "rehype-react": "^3.1.0",
         "remark-react": "^5.0.1",
-        "reveal.js": "^3.8.0",
-        "browser-monads": "^1.0.0"
+        "reveal.js": "^3.8.0"
     },
     "scripts": {
         "build": "gatsby build",
@@ -51,6 +50,7 @@
         "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
     },
     "devDependencies": {
+       "browser-monads": "^1.0.0",
         "prettier": "^1.16.4"
     },
     "repository": {
