--- a/package.json
+++ b/package.json
@@ -1,60 +1,52 @@
 {
-    "name": "makemycodefaster",
-    "private": true,
-    "description": "Learning course to help write better, faster, Pythonic code",
-    "version": "0.0.1",
-    "author": "Lillian Thistlethwaite",
-    "engines": {
-      "node": "10.24.1"
-    },
-    "dependencies": {
-        "@illinois/react-use-local-storage": "^1.1.0",
-        "@jupyterlab/outputarea": "^0.19.1",
-        "@jupyterlab/rendermime": "^0.19.1",
-        "@phosphor/widgets": "^1.6.0",
-        "autoprefixer": "^9.4.7",
-        "classnames": "^2.2.6",
-        "codemirror": "^5.43.0",
-        "gatsby": "^2.1.4",
-        "gatsby-image": "^2.0.29",
-        "gatsby-plugin-manifest": "^2.0.17",
-        "gatsby-plugin-offline": "^2.0.23",
-        "gatsby-plugin-react-helmet": "^3.0.6",
-        "gatsby-plugin-react-svg": "^2.1.1",
-        "gatsby-plugin-sass": "^2.0.10",
-        "gatsby-plugin-sharp": "^2.0.29",
-        "gatsby-plugin-sitemap": "^2.0.5",
-        "gatsby-remark-copy-linked-files": "^2.0.9",
-        "gatsby-remark-images": "^3.0.4",
-        "gatsby-remark-prismjs": "^3.2.4",
-        "gatsby-remark-smartypants": "^2.0.8",
-        "gatsby-remark-unwrap-images": "^1.0.1",
-        "gatsby-source-filesystem": "^2.0.20",
-        "gatsby-transformer-remark": "^2.2.5",
-        "gatsby-transformer-sharp": "^2.1.17",
-        "juniper-js": "^0.1.0",
-        "node-sass": "^4.11.0",
-        "prismjs": "^1.15.0",
-        "react": "^16.8.2",
-        "react-dom": "^16.8.2",
-        "react-helmet": "^5.2.0",
-        "rehype-react": "^3.1.0",
-        "remark-react": "^5.0.1",
-        "reveal.js": "^3.8.0"
-    },
-    "scripts": {
-        "build": "gatsby build",
-        "dev": "gatsby develop",
-        "lint": "eslint **",
-        "clear": "rm -rf .cache",
-        "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
-    },
-    "devDependencies": {
-       "browser-monads": "^1.0.0",
-        "prettier": "^1.16.4"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/lashmore/makemycodefaster"
-    }
+  "name": "makemycodefaster",
+  "version": "1.0.0",
+  "private": true,
+  "description": "makemycodefaster",
+  "author": "Lillian Thistlethwaite",
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
+  },
+  "dependencies": {
+    "@jupyterlab/outputarea": "^3.4.4",
+    "@jupyterlab/rendermime": "^3.4.4",
+    "@jupyterlab/services": "^6.4.4",
+    "@phosphor/widgets": "^1.9.3",
+    "browser-monads": "^1.0.0",
+    "classnames": "^2.3.1",
+    "codemirror": "^5.43.0",
+    "crypto-browserify": "^3.12.0",
+    "gatsby": "^4.19.2",
+    "gatsby-plugin-google-analytics": "^4.19.0",
+    "gatsby-plugin-google-gtag": "^4.19.0",
+    "gatsby-plugin-manifest": "^4.19.0",
+    "gatsby-plugin-offline": "^5.19.0",
+    "gatsby-plugin-react-helmet": "^5.19.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sass": "^5.19.0",
+    "gatsby-plugin-sharp": "^4.19.0",
+    "gatsby-plugin-sitemap": "^5.19.0",
+    "gatsby-remark-copy-linked-files": "^5.19.0",
+    "gatsby-remark-images": "^6.19.0",
+    "gatsby-remark-prismjs": "^6.19.0",
+    "gatsby-remark-smartypants": "^5.19.0",
+    "gatsby-remark-unwrap-images": "^1.0.2",
+    "gatsby-source-filesystem": "^4.19.0",
+    "gatsby-transformer-remark": "^5.19.0",
+    "gatsby-transformer-sharp": "^4.19.0",
+    "marked": "^4.0.18",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "rehype-react": "^7.1.1",
+    "reveal.js": "^4.3.1",
+    "sass": "^1.54.0",
+    "stream-browserify": "^3.0.0"
+  }
 }
